Implementing generating PDF from HTML.

--- a/views/parse-page.pug
+++ b/views/parse-page.pug
@@ -11,8 +11,11 @@ html
     |
     |
     style(type='text/css')
-      |
-      |  td {
+      |  body {
+      |      font-size: #{fontSize};
+      |  }
+      |  
+      |   td {
       |      padding: 0.3em;
       |  }
       |  table {
